slurm-12815268.out
  File "<string>", line 1
    import yaml; f=open(data/pkl_dev/2023-03-23_19-08-03/data_config.yaml, 'r'); data=yaml.safe_load(f); f.close(); print(data['save_dir'].split('/')[-1])
                                           ^
SyntaxError: invalid token
